--- a/3dprinting.html
+++ b/3dprinting.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Custom Funko Pops, 3D printing projects, Maker portfolio, DIY crafts and models, Creative 3D design ideas, Personalized 3D printed gifts, Unique maker projects, 3D printing tutorials, DIY Funko Pop designs, 3D printed collectibles">
 
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
@@ -19,7 +19,7 @@
             <a href="index.html">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
-                <img src="images/white-bars-solid.svg" height="15px" width="15px">
+                <img src="images/assets/white-bars-solid.svg" height="15px" width="15px">
             </div>
         <!--<nav class="Navbar__Items">
             <div class="Navbar__Link">
@@ -41,7 +41,7 @@
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="#">PHOTOGRAPHY<img src="images/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a href="#">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
                         <a href="photography.html">PROJECTS</a>
                         <a href="portfolio.html">PORTFOLIO</a>
@@ -69,7 +69,7 @@
                     <section id="blog-list">
                         <a href="customfunkopops.html" class="item-link">
                             <picture class="item-link-image">
-                                <img alt="funko pop image" height="60" width="60" src="images/funko-pop-front.png">
+                                <img alt="funko pop image" height="60" width="60" src="images/funkopops/funko-pop-front.png">
                             </picture>
                             <div class="content-group">
                                 <h3 class="feature-h3">Custom Funko Pop Inspired Models</h3>
