--- a/customfunkopops.html
+++ b/customfunkopops.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Photography, crafts, 3d printing">
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
     <meta name="title" content="DIY Custom Funko Pop: A Step-by-Step Guide to 3D Printing and Painting">
     <meta name="description" content="Learn how to create a custom Funko Pop model using 3D printing and painting techniques. This detailed guide covers design, printing, and finishing touches to make the perfect gift or collectible.">
     <meta name="keywords" content="custom Funko Pop, DIY Funko Pop, 3D printed Funko Pop, 3D printing projects, painting Funko Pop, Funko Pop design, making Funko Pop box, personalized Funko Pop, 3D model Funko Pop, Funko Pop painting tips">
@@ -13,12 +13,12 @@
     <meta property="og:title" content="DIY Custom Funko Pop: A Step-by-Step Guide to 3D Printing and Painting">
     <meta property="og:description" content="Transform your ideas into a unique custom Funko Pop! Follow this step-by-step guide to create your own 3D printed and painted collectible or gift.">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="images/funko-pop-front-sidebyside.jpg">
+    <meta property="og:image" content="images//funkopops/funko-pop-front-sidebyside.jpg">
     <meta property="og:url" content="#">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="DIY Custom Funko Pop: A Step-by-Step Guide to 3D Printing and Painting">
     <meta property="twitter:description" content="Discover how to design, 3D print, and paint a custom Funko Pop in this comprehensive DIY tutorial.">
-    <meta property="twitter:image" content="images/funko-pop-front-sidebyside.jpg">
+    <meta property="twitter:image" content="images/funkopops/funko-pop-front-sidebyside.jpg">
 
     
     <title>The Maker's Lens</title>
@@ -31,7 +31,7 @@
             <a href="index.html">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
-                <img src="images/white-bars-solid.svg" height="15px" width="15px">
+                <img src="images/assets/white-bars-solid.svg" height="15px" width="15px">
             </div>
         <!--<nav class="Navbar__Items">
             <div class="Navbar__Link">
@@ -53,7 +53,7 @@
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="#">PHOTOGRAPHY<img src="images/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a href="#">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
                         <a href="photography.html">PROJECTS</a>
                         <a href="portfolio.html">PORTFOLIO</a>
@@ -70,7 +70,7 @@
             <div class="main-content">
                 <article class="blog-article">
                     <picture class="blog-main-image-square">
-                        <img alt="Custom funko pop with a white background" height="300" width="375" src="images/model-in-box-leavesbg.png">
+                        <img alt="Custom funko pop with a white background" height="300" width="375" src="images/funkopops/model-in-box-leavesbg.png">
                     </picture>
                     <h1>Custom Funko Pop Inspired Models</h1>
                     <div class="blog-author-group">
@@ -115,7 +115,7 @@
                             The prompt I had the most success with in the end was "headless character wearing jeans and a hoodie in the style of a funko pop model." However, you will have to experiment with different prompts to see what generates the best results. 
                         </p>
                         <picture class="blog-images">
-                            <img alt="3d model of a headless funko pop" height="300" width="375" src="images/meshy.ai output.png">
+                            <img alt="3d model of a headless funko pop" height="300" width="375" src="images/funkopops/meshy.ai output.png">
                         </picture>
                         <p>
                             Also at this stage it may be worth including in the prompt that the character has closed fists, as it is much harder printing a character with individual fingers as they tend to snap off. I didn't do this the first time around and so spent longer editing the model later on.
@@ -133,7 +133,7 @@
                             You can think slightly outside of the box with this, as I found a 3D model of hair that was actually designed to fit with a lego minifigure, however, I resized it to fit on the Funko Pop head. The model I used can be found <a href="https://www.thingiverse.com/thing:6869845" target="_blank">here</a>.
                         </p>
                         <picture class="blog-images">
-                            <img alt="3d model of a plain funko pop with hair" height="300" width="375" src="images/funko-pop-with-hair.png">
+                            <img alt="3d model of a plain funko pop with hair" height="300" width="375" src="images/funkopops/funko-pop-with-hair.png">
                         </picture>
                         <p>
                             You may also want to add accessories to the model as these can help make it recognisable as the person you are trying to recreate, such as yourself or a friend. I just added a bow to the hair, which I found on Thingiverse <a href="https://www.thingiverse.com/thing:277106" target="_blank">here</a>.
@@ -151,7 +151,7 @@
                             As mentioned, I struggled to print the fingers on the model that was generated. Therefore I cut the hands off of the model in 3D Builder, and replaced them with the closed fists from the Funko Pop template model downloaded from Thingiverse.
                         </p>
                         <picture class="blog-images">
-                            <img alt="3d model of a headless funko pop with a neck and closed fists, and a funko pop head with a neck hole" height="300" width="375" src="images/neck-sidebyside.jpg">
+                            <img alt="3d model of a headless funko pop with a neck and closed fists, and a funko pop head with a neck hole" height="300" width="375" src="images/funkopops/neck-sidebyside.jpg">
                         </picture>
                         <h2>Printing the model</h2>
                         <p>
@@ -163,7 +163,7 @@
                             For the body, I printed it stood vertically with tree supports for the hands and the hood of the hoodie. 
                         </p>
                         <picture class="blog-images">
-                            <img alt="3d model of a Funko Pop body with supports, and a Funko Pop head split into two in slicing software" height="300" width="375" src="images/models-in-cura-sidebyside.jpg">
+                            <img alt="3d model of a Funko Pop body with supports, and a Funko Pop head split into two in slicing software" height="300" width="375" src="images/funkopops/models-in-cura-sidebyside.jpg">
                         </picture>
                         <p>
                             In terms of settings, I recommend printing with at least 50% infill on the body and 20% on the head so that the finished model has a similar weight to a real Funko Pop. I'd also recommend upping the wall thickness so that when the model is sanded down later you dont accidentally break through the outer layers. I used a wall line count of 4, for a thickness of 0.8mm.
@@ -171,7 +171,7 @@
                             Printing time for the body was around 4 hours, and the head took roughly 11 hours. Once printed, I glued the hair piece onto the head using <a href="https://www.amazon.co.uk/UniBond-Original-Heavy-Duty-Mounting-Adhesive/dp/B013XCFO6G/ref=sr_1_2_sspa?crid=2XG96EUUFGZKY&dib=eyJ2IjoiMSJ9.peSqOMIvPgGYBiCNDMVEBz9GLY-aFkuTBTW-VG_Y1j668ESdrldmar2NpNZdDn3lQo-fX231B0ERHm_hvTU0n9EnjekGH0kJDL125zSsfiNq7_q9HHJMXurGvRXEtJ3EHy62QfG73umwQWEKq3L44AofFDzu228LuGfd9Mn_at9LyFdjPJo_Sm_tr1AIi2OMHNVKczh3FthmnIZ8bBwEIN8U3dvBr9eJJIFUCZ6kVDd0UDeDiIR-lwyrTY7Ml6x3YfiW-xU7FLOLz-oy9MVJwDijaoMj1-ea2ecvKrq0-Bs.cJITF5mfHwOPX3zmjP1xyqrgUZr2-onyl6j5rMUrr0I&dib_tag=se&keywords=unibond%2Bno%2Bmore%2Bnails&nsdOptOutParam=true&qid=1734883654&sprefix=unibond%2Bno%2Bmore%2Bnail%2Caps%2C1881&sr=8-2-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&th=1" target="_blank">Unibond No More Nails</a>, because that's just what I had laying around. However, any strong adhesive that works with plastics should be fine.
                         </p>
                         <picture class="blog-images">
-                            <img alt="3d printed Funko Pop showing the head pieces glued together" height="300" width="375" src="images/model-printed-glued.png">
+                            <img alt="3d printed Funko Pop showing the head pieces glued together" height="300" width="375" src="images/funkopops/model-printed-glued.png">
                         </picture>
                         <p>
                             The filament I used was <a href="https://www.amazon.co.uk/SUNLU-Filament-Printer-Tolerance-Accuracy/dp/B088BC5QBJ/ref=sr_1_5?crid=2WA7O4R69IM89&dib=eyJ2IjoiMSJ9.8-bW40_APJpWJlykc6E7YspFjgW3Kvp5-VnuiPHFkkYjNWLicZ7V8eyJO1qLa5bVnXnvU4c0Cf_oBNF7BzomjiVhPdvxzbD4SiAmvqVyt25NAFFuZhQexmHAnjMj3yz-YASz62aY5VyajY5rAIWLFaehqbnoCeRUiVbn4AMDC56D1GlQsRT7Mks0dLi9kqR9llWVZBXVc6fdrNf4lJOWQMIO5f6EOErsAocatDDVz__yY3rfc8uUSW8MDVHq6sfrwu_ch4u8b0BBG8ewPqIz8ynriU--YnZ8LQ-HZj49r-Y52Q5xn6RNVzRpbiVfSGUDx2LjClXeaXx8BOrPvRzPldGwqVUlq3jMOPEdy1QqOkAxATvwWYAAJFii8YV9IB-XjeOtvUAhxqoCzd_TrjyTRW5cWyIN0zi_zZGg4qXz7IUz4Q_dA69z_5-4CcQW9GfC.MAThkt6M4b8eDrE3s8OY-u1IG2nDVDk2f6jGtIQL15s&dib_tag=se&keywords=sunlu+pla+wood&nsdOptOutParam=true&qid=1734883509&sprefix=sunlu+pla+woo%2Caps%2C104&sr=8-5" target="_blank">SUNLU PLA+ Filament (Wood)</a>.
@@ -185,7 +185,7 @@
                             When applying the primer it's best to follow the instructions on the spraycan, although most share similar instructions, such as spraying from _ cm away from the target. Nonetheless, if the primer does drip down, you can always lightly sand it down so that it's smooth again.
                         </p>
                         <picture class="blog-images">
-                            <img alt="3d printed primed Funko Pop in box" height="300" width="375" src="images/primed-funko-pop-in-box-bluebg.jpg">
+                            <img alt="3d printed primed Funko Pop in box" height="300" width="375" src="images/funkopops/primed-funko-pop-in-box-bluebg.jpg">
                         </picture>
                         <p>
                             Once the model is fully primed and has been left to dry, it's time to paint! I recruited my sister for this as she's more of an artist than me, but she just used a selection of acrylic paints and fine-tip brushes to paint the entire thing.
@@ -195,7 +195,7 @@
                             However, if you want the head to be able to rotate, just don't glue it down! The pieces friction-fitted together quite well, so the head wouldnt even fall off and could rotate on the neck. However, I decided to glue it down anyway to make the model feel more solid.
                         </p>
                         <picture class="blog-images">
-                            <img alt="Finished 3D printed custom funko pop with green hoodie and dark trousers" height="300" width="375" src="images/funko-pop-front-sidebyside.jpg">
+                            <img alt="Finished 3D printed custom funko pop with green hoodie and dark trousers" height="300" width="375" src="images/funkopops/funko-pop-front-sidebyside.jpg">
                         </picture>
                         <p>
                             And there we go! The model is finished! Now we only have to make the box!
@@ -207,19 +207,19 @@
                             For the character image on the box, I used the <a href="https://funko.com/pop-yourself.html" target="_blank">Funko Pop designer</a> on the official Funko Pop website to make a model that looked similar to mine. I then just downloaded it as an image and made adjustments to it in photoshop.
                         </p>
                         <picture class="blog-images">
-                            <img alt="Funko Pop character wearing all black with grey shoes" height="300" width="375" src="images/pop-designer-image.jpg">
+                            <img alt="Funko Pop character wearing all black with grey shoes" height="300" width="375" src="images/funkopops/pop-designer-image.jpg">
                         </picture>
                         <p>
                             The box also provides a great opportunity for adding your own unique touch to the finished package. On mine I added a photo of my girlfriend's cat, as you can see below. If it is a gift you can also write a nice message on the underside of the box.
                         </p>
                         <picture class="blog-images">
-                            <img alt="The back and side of a custom funko pop box with a small picture of a cat on it" height="300" width="375" src="images/box-back-bluebg.jpg">
+                            <img alt="The back and side of a custom funko pop box with a small picture of a cat on it" height="300" width="375" src="images/funkopops/box-back-bluebg.jpg">
                         </picture>
                         <p>
                             And there we go! The project is finished! If you have any questions don't hesitate to send me an email, my contact details can be found at the bottom of the page. Feel free to check out some of my other projects, such as my recent startrails endeavour which can be found <a href="startrails.html">here!</a>
                         </p>
                         <picture class="blog-images">
-                            <img alt="Finished custom funko pop model in a box, alongside an image of the same model outside of the box" height="300" width="375" src="images/finished-thing-sidebyside.jpg">
+                            <img alt="Finished custom funko pop model in a box, alongside an image of the same model outside of the box" height="300" width="375" src="images/funkopops/finished-thing-sidebyside.jpg">
                         </picture>                            
                     </section>
                 </article>
