--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Discover expert photography tips, creative 3D printing projects, and innovative DIY ideas at The Maker’s Lens. Unleash your creativity and bring your visions to life!" />
     <meta name="keywords" content="Photography, crafts, 3d printing,DIY projects, wood filament printing, photo tips, creative hobbies, photography for makers, 3D printing tutorials, photography and 3D printing blog, maker community">
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
@@ -18,7 +18,7 @@
             <a href="index.html">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
-                <img src="images/white-bars-solid.svg" height="15px" width="15px">
+                <img src="images/assets/white-bars-solid.svg" height="15px" width="15px">
             </div>
         <!--<nav class="Navbar__Items">
             <div class="Navbar__Link">
@@ -40,7 +40,7 @@
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="#">PHOTOGRAPHY<img src="images/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a href="#">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
                         <a href="photography.html">PROJECTS</a>
                         <a href="portfolio.html">PORTFOLIO</a>
@@ -57,7 +57,7 @@
             <div class="main-content">
                 <article class="blog-article">
                     <picture class="blog-main-image">
-                        <img alt="A white chalk question mark on a blackboard" height="300" width="375" src="images/question-mark.jpg">
+                        <img alt="A white chalk question mark on a blackboard" height="300" width="375" src="images/assets/question-mark.jpg">
                     </picture>
                     <h1>WHAT IS THE MAKER'S LENS?</h1>
                     <div class="blog-author-group">
@@ -85,7 +85,7 @@
                     <section id="blog-list">
                         <a href="customfunkopops.html" class="item-link">
                             <picture class="item-link-image">
-                                <img alt="funko pop image" height="60" width="60" src="images/funko-pop-front.png">
+                                <img alt="funko pop image" height="60" width="60" src="images/funkopops/funko-pop-front.png">
                             </picture>
                             <div class="content-group">
                                 <h3 class="feature-h3">Custom Funko Pop Inspired Models</h3>
