--- a/photography.html
+++ b/photography.html
@@ -6,19 +6,10 @@
     <meta name="title" content="Photography Projects - The Maker's Lens">
     <meta name="description" content="Explore a curated collection of photography projects, capturing creativity through the lens. Discover artistic techniques, gear tips, and breathtaking visuals.">
     <meta name="keywords" content="Photography projects, creative photography, photo techniques, photography gear, visual art, photography portfolio, The Maker's Lens">
-    <meta property="og:title" content="Photography Projects - The Maker's Lens">
-    <meta property="og:description" content="Discover an inspiring showcase of photography projects with tips, techniques, and stunning visuals to spark your creativity.">
-    <meta property="og:image" content="https://example.com/your-feature-image.jpg">
-    <meta property="og:url" content="https://example.com/photography-projects">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Photography Projects - The Maker's Lens">
-    <meta name="twitter:description" content="Dive into a collection of creative photography projects and gear insights, perfect for aspiring photographers.">
-    <meta name="twitter:image" content="https://example.com/your-feature-image.jpg">
-    <link rel="canonical" href="https://example.com/photography-projects">
+
 
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
@@ -30,7 +21,7 @@
             <a href="index.html">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
-                <img src="images/white-bars-solid.svg" height="15px" width="15px">
+                <img src="images/assets/white-bars-solid.svg" height="15px" width="15px">
             </div>
         <!--<nav class="Navbar__Items">
             <div class="Navbar__Link">
@@ -52,7 +43,7 @@
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="#">PHOTOGRAPHY<img src="images/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a href="#">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
                         <a href="photography.html">PROJECTS</a>
                         <a href="portfolio.html">PORTFOLIO</a>
