--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
@@ -16,7 +16,7 @@
             <a href="index.html">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
-                <img src="images/white-bars-solid.svg" height="15px" width="15px">
+                <img src="images/assets/white-bars-solid.svg" height="15px" width="15px">
             </div>
         <!--<nav class="Navbar__Items">
             <div class="Navbar__Link">
@@ -38,7 +38,7 @@
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="#">PHOTOGRAPHY<img src="images/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a href="#">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
                         <a href="photography.html">PROJECTS</a>
                         <a href="portfolio.html">PORTFOLIO</a>
