--- a/3dprinting.html
+++ b/3dprinting.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Custom Funko Pops, 3D printing projects, Maker portfolio, DIY crafts and models, Creative 3D design ideas, Personalized 3D printed gifts, Unique maker projects, 3D printing tutorials, DIY Funko Pop designs, 3D printed collectibles">
 
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/assets/favicon.ico?">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
