--- a/customfunkopops.html
+++ b/customfunkopops.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Photography, crafts, 3d printing">
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/assets/favicon.ico?">
     <meta name="title" content="DIY Custom Funko Pop: A Step-by-Step Guide to 3D Printing and Painting">
     <meta name="description" content="Learn how to create a custom Funko Pop model using 3D printing and painting techniques. This detailed guide covers design, printing, and finishing touches to make the perfect gift or collectible.">
     <meta name="keywords" content="custom Funko Pop, DIY Funko Pop, 3D printed Funko Pop, 3D printing projects, painting Funko Pop, Funko Pop design, making Funko Pop box, personalized Funko Pop, 3D model Funko Pop, Funko Pop painting tips">
@@ -13,7 +13,7 @@
     <meta property="og:title" content="DIY Custom Funko Pop: A Step-by-Step Guide to 3D Printing and Painting">
     <meta property="og:description" content="Transform your ideas into a unique custom Funko Pop! Follow this step-by-step guide to create your own 3D printed and painted collectible or gift.">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="images//funkopops/funko-pop-front-sidebyside.jpg">
+    <meta property="og:image" content="images/funkopops/funko-pop-front-sidebyside.jpg">
     <meta property="og:url" content="#">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="DIY Custom Funko Pop: A Step-by-Step Guide to 3D Printing and Painting">
