--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Discover expert photography tips, creative 3D printing projects, and innovative DIY ideas at The Maker’s Lens. Unleash your creativity and bring your visions to life!" />
     <meta name="keywords" content="Photography, crafts, 3d printing,DIY projects, wood filament printing, photo tips, creative hobbies, photography for makers, 3D printing tutorials, photography and 3D printing blog, maker community">
     <meta name="author" content="The Maker's Lens">
-    <link rel="shortcut icon" type="image/x-icon" href="images/assets/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="images/assets/favicon.ico?">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
