--- a/photography.html
+++ b/photography.html
@@ -9,7 +9,7 @@
 
 
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/assets/favicon.ico?">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
