--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="The Maker's Lens">
-    <link rel="icon" href="images/assets/The Maker's Lens Logo no-bg.png" type="image/png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/assets/favicon.ico?">
     
     <title>The Maker's Lens</title>
     <link rel="stylesheet" href="lightmode.css">
