--- a/customfunkopops.html
+++ b/customfunkopops.html
@@ -28,7 +28,7 @@
 
     <div class="Navbar">
             <div class="Navbar__Link Navbar__Link-brand">
-            <a href="index.html">THE MAKER'S LENS</a>
+            <a href="/">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
                 <img src="images/assets/white-bars-solid.svg" height="15px" width="15px">
@@ -46,17 +46,17 @@
         </nav>!-->
         <nav class="Navbar__Items Navbar__Items--right">
             <div class="Navbar__Link">
-                <a href="index.html">HOME</a>
+                <a href="/">HOME</a>
             </div>
             <div class="Navbar__Link">
-                <a href="3dprinting.html">3D PRINTING</a>
+                <a href="/3dprinting">3D PRINTING</a>
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="#">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a href="">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
-                        <a href="photography.html">PROJECTS</a>
-                        <a href="portfolio.html">PORTFOLIO</a>
+                        <a href="/photography">PROJECTS</a>
+                        <a href="/portfolio">PORTFOLIO</a>
                     </div>
                     
                 </span>
@@ -216,7 +216,7 @@
                             <img alt="The back and side of a custom funko pop box with a small picture of a cat on it" height="300" width="375" src="images/funkopops/box-back-bluebg.jpg">
                         </picture>
                         <p>
-                            And there we go! The project is finished! If you have any questions don't hesitate to send me an email, my contact details can be found at the bottom of the page. Feel free to check out some of my other projects, such as my recent startrails endeavour which can be found <a href="startrails.html">here!</a>
+                            And there we go! The project is finished! If you have any questions don't hesitate to send me an email, my contact details can be found at the bottom of the page. Feel free to check out some of my other projects, such as my recent startrails endeavour which can be found <a href="/startrails">here!</a>
                         </p>
                         <picture class="blog-images">
                             <img alt="Finished custom funko pop model in a box, alongside an image of the same model outside of the box" height="300" width="375" src="images/funkopops/finished-thing-sidebyside.jpg">
@@ -228,7 +228,7 @@
                 <div class="blog-featured-group">
                     <h3>Featured Posts</h3>
                     <section id="blog-list">
-                        <a href="startrails.html" class="item-link">
+                        <a href="/startrails" class="item-link">
                             <picture class="item-link-image">
                                 <img alt="startrails image" height="60" width="60" src="images/startrails/edited and combined.png">
                             </picture>
