--- a/startrails.html
+++ b/startrails.html
@@ -14,7 +14,7 @@
 
     <div class="Navbar">
             <div class="Navbar__Link Navbar__Link-brand">
-            <a href="index.html">THE MAKER'S LENS</a>
+            <a href="/">THE MAKER'S LENS</a>
             </div>
             <div class="Navbar__Link Navbar__Link-toggle">
                 <img src="images/assets/white-bars-solid.svg" height="15px" width="15px">
@@ -32,17 +32,17 @@
         </nav>!-->
         <nav class="Navbar__Items Navbar__Items--right">
             <div class="Navbar__Link">
-                <a href="index.html">HOME</a>
+                <a href="/">HOME</a>
             </div>
             <div class="Navbar__Link">
-                <a href="3dprinting.html">3D PRINTING</a>
+                <a href="/3dprinting">3D PRINTING</a>
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="#">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a href="">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
-                        <a href="photography.html">PROJECTS</a>
-                        <a href="portfolio.html">PORTFOLIO</a>
+                        <a href="/photography">PROJECTS</a>
+                        <a href="/portfolio">PORTFOLIO</a>
                     </div>
                     
                 </span>
@@ -283,7 +283,7 @@
                 <div class="blog-featured-group">
                     <h3>Featured Posts</h3>
                     <section id="blog-list">
-                        <a href="customfunkopops.html" class="item-link">
+                        <a href="/customfunkopops" class="item-link">
                             <picture class="item-link-image">
                                 <img alt="funko pop image" height="60" width="60" src="images/funkopops/funko-pop-front.png">
                             </picture>
