--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             </div>
         </div>
     </main>
+    <script id="CookieDeclaration" src="https://consent.cookiebot.com/1319331f-2b80-47cb-b5f9-8cd6cd555ca0/cd.js" type="text/javascript" async></script>
     
     <footer>
         <p>
