--- a/photography.html
+++ b/photography.html
@@ -105,6 +105,7 @@
     </main>
     
     <footer>
+        <a href="/cookie-policy">Cookie Policy</a>
         <p>
             Contact Information:
         <a href="mailto:themakerslens@gmail.com">themakerslensblog@gmail.com</a>
