--- a/3dprinting.html
+++ b/3dprinting.html
@@ -104,6 +104,7 @@
     </main>
     
     <footer>
+        <a href="/cookie-policy">Cookie Policy</a>
         <p>
             Contact Information:
         <a href="mailto:themakerslens@gmail.com">themakerslensblog@gmail.com</a>
