--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
             </div>
         </div>
     </main>
-    <script id="CookieDeclaration" src="https://consent.cookiebot.com/1319331f-2b80-47cb-b5f9-8cd6cd555ca0/cd.js" type="text/javascript" async></script>
     
     <footer>
+        <a href="/cookie-policy">Cookie Policy</a>
         <p>
             Contact Information:
-        <a href="mailto:themakerslens@gmail.com">themakerslensblog@gmail.com</a>
+            <a href="mailto:themakerslens@gmail.com">themakerslensblog@gmail.com</a>
         </p>
     </footer>
 
