--- a/startrails.html
+++ b/startrails.html
@@ -312,6 +312,7 @@
     </main>
     
     <footer>
+        <a href="/cookie-policy">Cookie Policy</a>
         <p>
             Contact Information:
         <a href="mailto:themakerslens@gmail.com">themakerslensblog@gmail.com</a>
