--- a/startrails.html
+++ b/startrails.html
@@ -14,6 +14,9 @@
         gtag('config', 'G-82DP76Y4GZ');
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6810669615998260"
+    crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Photography, crafts, 3d printing">
@@ -314,8 +317,7 @@
     <footer>
         <a href="/cookie-policy">Cookie Policy</a>
         <p>
-            Contact Information:
-        <a href="mailto:themakerslens@gmail.com">themakerslensblog@gmail.com</a>
+            Contact Information:<a href="mailto:themakerslens@gmail.com">themakerslensblog@gmail.com</a>
         </p>
     </footer>
 
