--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,9 @@
         gtag('config', 'G-82DP76Y4GZ');
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6810669615998260"
+    crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="The Maker's Lens">
