--- a/startrails.html
+++ b/startrails.html
@@ -55,7 +55,7 @@
             </div>
             <div class="Navbar__Link">
                 <span class="dropdown">
-                    <button><a href="">PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
+                    <button><a>PHOTOGRAPHY<img src="images/assets/white_down_arrow-removebg-preview.png" height="15" width="15"></a></button>
                     <div class="content">
                         <a href="/photography">PROJECTS</a>
                         <a href="/portfolio">PORTFOLIO</a>
