--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="blog-featured-group">
                     <h3>Featured Posts</h3>
                     <section id="blog-list">
-                        <a href="/customfunkopops" class="item-link">
+                        <a href="/3dprinting/customfunkopops" class="item-link">
                             <picture class="item-link-image">
                                 <img alt="funko pop image" height="60" width="60" src="images/funkopops/funko-pop-front.png">
                             </picture>
