--- a/3dprinting/customfunkopops.html
+++ b/3dprinting/customfunkopops.html
@@ -28,7 +28,7 @@
 
     
     <title>The Maker's Lens</title>
-    <link rel="stylesheet" href="lightmode.css">
+    <link rel="stylesheet" href="/lightmode.css">
 </head>
 <body>
 
