--- a/3dprinting/customfunkopops.html
+++ b/3dprinting/customfunkopops.html
@@ -234,7 +234,7 @@
                 <div class="blog-featured-group">
                     <h3>Featured Posts</h3>
                     <section id="blog-list">
-                        <a href="/startrails" class="item-link">
+                        <a href="/photography/startrails" class="item-link">
                             <picture class="item-link-image">
                                 <img alt="startrails image" height="60" width="60" src="images/startrails/edited and combined.png">
                             </picture>
