--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <span class="feature-date">Dec 21, 2024</span>
                             </div>
                         </a>
-                        <a href="/startrails" class="item-link">
+                        <a href="/photography/startrails" class="item-link">
                             <picture class="item-link-image">
                                 <img alt="startrails image" height="60" width="60" src="images/startrails/edited and combined.png">
                             </picture>
